# auto-tender

./: .gitignore  Cargo.toml  README.md  semantic_search_pdf_debug.md  test_semantic_search.md  test_simple.rs
.github/workflows/: randomized_tests.yml
assets/prompts/: assistant_system_prompt.hbs
assets/settings/: default.json
crates/agent/: Cargo.toml
crates/agent/src/: active_thread.rs  agent.rs  agent_model_selector.rs  agent_panel.rs  context.rs  message_editor.rs  profile_selector.rs  thread_store.rs
crates/anthropic/: Cargo.toml
crates/assistant_context_editor/src/: context.rs  context_editor.rs  context_store.rs
crates/assistant_settings/src/: assistant_settings.rs
crates/assistant_tools/: Cargo.toml
crates/assistant_tools/src/: assistant_tools.rs  read_file_tool.rs  semantic_search_tool.rs  terminal_tool.rs
crates/cli/src/: main.rs
crates/client/src/: telemetry.rs
crates/collab/src/: lib.rs
crates/editor/src/: items.rs
crates/extensions_ui/: Cargo.toml
crates/extensions_ui/src/: extensions_ui.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_panel.rs
crates/gpui/src/: color.rs
crates/http_client/src/: http_client.rs
crates/language_model/src/: language_model.rs  (+1 more)
crates/paths/: Cargo.toml
crates/semantic_index/: Cargo.toml
crates/theme_selector/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/src/instance/: mod.rs
crates/writing_app_settings/: Cargo.toml
crates/writing_app_settings/src/: lib.rs  panel.rs
crates/zed/: Cargo.toml
docs/src/: vim.md
scripts/: rebrand.sh
(+26 files in other folders)
