[package]
name = "writing_app_settings"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
util.workspace = true